# restaurent-pos

./: composer.json  package-lock.json  package.json
app/Events/: NotificationPushed.php  OrderCancelled.php  OrderUpdated.php  TableAssigned.php
app/Models/: Category.php  Expense.php  ExpenseCategory.php  InventoryItem.php  KitchenPrint.php  MenuItem.php  Notification.php  Order.php  OrderItem.php  RestaurantTable.php  StockTransaction.php  Supplier.php  User.php
app/Services/: PrinterService.php
backend/: README.md  pyproject.toml
backend/app/: main.py
bootstrap/: app.php
config/: broadcasting.php
database/migrations/: 0001_01_01_000000_create_users_table.php  2025_05_23_083208_create_restaurant_tables_table.php  2025_05_23_083226_create_menu_items_table.php  2025_05_23_083232_create_orders_table.php  2025_05_23_083256_create_order_items_table.php  2025_05_23_083306_create_kitchen_prints_table.php  2025_05_23_083314_create_notifications_table.php  2025_05_28_095142_create_inventory_items_table.php  2025_05_28_095617_create_suppliers_table.php  2025_05_28_095635_create_stock_transactions_table.php  2025_05_28_095653_create_expense_categories_table.php  2025_05_28_095730_create_expenses_table.php  2025_08_12_000001_add_billing_fields_to_orders.php  2025_08_12_000002_add_fields_to_order_items.php  2025_08_12_000003_add_parent_to_orders.php  2025_08_12_000004_create_menu_item_ingredients_table.php
database/seeders/: CategorySeeder.php  DatabaseSeeder.php  UserSeeder.php  (+7 more)
routes/: api.php  web.php
socket-server/: package-lock.json  package.json  server.js
(+70 files in other folders)
