[tool.poetry]
name = "restaurant-pos-backend"
version = "0.1.0"
description = "Restaurant POS backend (waiter/receptionist/owner) with table assignments, orders, printing, websockets"
authors = ["You <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
SQLAlchemy = "^2.0.30"
aiosqlite = "^0.20.0"
sqlalchemy-utils = "^0.41.2"
passlib = {extras=["bcrypt"], version="^1.7.4"}
python-jose = {extras=["cryptography"], version="^3.3.0"}
httpx = "^0.27.0"
# For optional ESC/POS printing support
python-escpos = {version = "^3.1.0", optional = true}

[tool.poetry.extras]
printing = ["python-escpos"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"